--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0"
